# ChangeLog for media-libs/zita-resampler
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  zita-resampler-1.3.0.ebuild:
  stabilize

*zita-resampler-1.3.0 (28 Oct 2012)

  28 Oct 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  -zita-resampler-0.1.1-r2.ebuild,
  -files/zita-resampler-0.1.1-apps-Makefile.patch,
  -files/zita-resampler-0.1.1-makefile.patch, -zita-resampler-1.1.0-r1.ebuild,
  -zita-resampler-1.1.0-r2.ebuild, -files/zita-resampler-1.1.0-Makefile.patch,
  -files/zita-resampler-1.1.0-Makefile-v2.patch, -zita-resampler-1.2.0.ebuild,
  -files/zita-resampler-1.2.0-Makefile.patch, +zita-resampler-1.3.0.ebuild,
  +files/zita-resampler-1.3.0-Makefile.patch, metadata.xml:
  bump thanks to Jannis Achstetter. cleanup.

*zita-resampler-1.2.0 (26 Sep 2012)

  26 Sep 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  +zita-resampler-1.2.0.ebuild, +files/zita-resampler-1.2.0-Makefile.patch:
  bump

*zita-resampler-1.1.0-r2 (24 Aug 2012)

  24 Aug 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  -zita-resampler-0.1.1-r1.ebuild, +zita-resampler-1.1.0-r2.ebuild,
  +files/zita-resampler-1.1.0-Makefile-v2.patch:
  revise to fix linking of zresample app on fresh install. add README and
  install html docs. LICENSE for 1.1.0 is now GPL-3. remove old ebuild.

*zita-resampler-1.1.0-r1 (30 Jul 2012)

  30 Jul 2012; Dominique Michel <dominique@tuxfamily.org>
  - zita-resampler-1.1.0 (30 Jun 2012)
  -files/zita-resampler-1.1.0-apps-Makefile.patch
  zita-resampler-1.1.0-Makefile.patch: drop arch; pass DESTDIR
  + zita-resampler-1.1.0.ebuild-r1: the new patch fix dynamic linking consistency
 
*zita-resampler-1.1.0 (30 Jun 2012)

  30 Jun 2012; Dominique Michel <dominique@tuxfamily.org>
  + zita-resampler-1.1.0.ebuild: initial ebuild for the 1.1.0 version

*zita-resampler-0.1.1-r2 (06 Jan 2012)

  06 Jan 2012; Gavin Pryke <gavinlee303@googlemail.com>