@@ -1,5 +1,5 @@
 AUX zita-resampler-1.3.0-Makefile.patch 2733 SHA256 214467e23987346d379a68052fb379c13ca34b375b1debeb685bc2e1f4977940 SHA512 a9d5dbd7fc3019b0e394914a68ff2b39689f36264b0793c18d2eae9af41c672826cdab71fd32163495238f1218e78c3989b45d3ae59da97b6946f6b717751b7c WHIRLPOOL 5ebf9c62d1d8336aa6fdf32e3db545a704892e8afaf7b311fc037dcca5235cd6484f40cafa45942e22398adf7480027e257425be0734051b788c3689a8d08c4e
 DIST zita-resampler-1.3.0.tar.bz2 124479 SHA256 98034c8c77b03ad1093f7ca0a83ccdfad5a36040a5a95bd4dac80fa68bcf2a65 SHA512 c782d1aca3761b42a66c4f049a19608e6a3334f1de125b483c2fb5c29eb2afd1bcf1d02a66db39619971411f0fbc35c404d3495a868f82b36627d9793cc0c93b WHIRLPOOL 92d539a4b97ba6b8fb42ea702414c395a7571c39323ce08ac21492d956ee9d6263646ac087d10d46f9273ce9bb25c36a259d62a42d8f88d140164be6acf08b43
-EBUILD zita-resampler-1.3.0.ebuild 889 SHA256 6eb6a7aae8ef16ce710b633e775b86733b39beec5661afb9496f96e700bdfee0 SHA512 2b3925498b12c8b6c03802036f359356c5c24cde3ebd559c4a170b5c72d101dc3236b0d592e746403169502eb3458dd03f7d2f7204e5f7330561ce14f9424617 WHIRLPOOL 94fa172538b3f2665ca7c44f6d0490ff7ca8f73e57dc74f8f09470af16db80e4e206a1f921d9ee55531a6f6bd74e8c8eb80ba4052835f2da42f6b1cdd84eef2b
-MISC ChangeLog 2714 SHA256 a2199e6bbe673a13fa26cf44294464a748320f0b7b561c561631d7cd7150b1df SHA512 ebed4c25a99174540dd53c764e58efe2a39bc2ac51107a6232f590583c0156462912906f380f60bd5c3ef5618fdc96cb8da28a2e83ace3365babeb38db4b1956 WHIRLPOOL 510d72994a379c1ddd774f1ff9262fb42d2a03c8210f7a609b688b01a76152a39ce19a726fafed0875d563ce1052983f29fcd3c53c19d7155348b2091bb42d41
+EBUILD zita-resampler-1.3.0.ebuild 838 SHA256 4350f03697590b50135f439584aa499e530f6d2131caa5164fda649454fe1895 SHA512 cc6da693cf50327f2ad6fa5e377298d774b41425ab7581dc59f41fb8b21cb16609992e34d76cc36c9bce64c2d8b0da5e3c9ac636b8eb8af8406f2dd09c55894a WHIRLPOOL 3bf43bead0289a05da174b0d1d2e492841213e6c30dfbbc86d48987f69d7922fb636a78abf96301e78609ef6af598ed3e135e4b68e035ce08aff01a53180ea89
+MISC ChangeLog 2886 SHA256 8458e2967920a26e3dfaccc2ab65024d109e4850a571e5d1cdb67f00cf23aaf2 SHA512 825c87aa23a9fd272a1583b0b86d98d9ce51c31cf9c3ad7506df2a486ae4009e7133341bdf9aaaddb8ba75ef39c54932da5898334326bb24a71c24179be00837 WHIRLPOOL 6ba3408f7d854f5259e33815dd40015574a05387d495bfa3e6a25584c10653aa127df6d7cfd8cb45b1f3f351d05f74b7eba11a1d1eb92f12f841fd1510f6bd5b
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
