@@ -1,8 +1,8 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 inherit base toolchain-funcs multilib
 
 DESCRIPTION="C++ library for real-time resampling of audio signals"
@@ -11,7 +11,7 @@ SRC_URI="http://kokkinizita.linuxaudio.org/linuxaudio/downloads/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="amd64 x86"
+KEYWORDS="amd64 ~ppc x86"
 IUSE=""
 
 DEPEND="media-libs/libsndfile"
@@ -26,21 +26,12 @@ PATCHES=("${FILESDIR}"/${P}-Makefile.patch)
 
 src_compile() {
 	tc-export CXX
-	cd libs
-	base_src_make
-
-	cd ../apps
-	base_src_make
+	emake -C libs
+	emake -C apps
 }
 
 src_install() {
-	cd libs
-	base_src_make DESTDIR="${D}" PREFIX="${EPREFIX}/usr" \
-		LIBDIR=$(get_libdir) install
-
-	cd ../apps
-	base_src_make DESTDIR="${D}" PREFIX="${EPREFIX}/usr" install
-	cd ..
-
+	emake -C libs DESTDIR="${D}" PREFIX="${EPREFIX}/usr" LIBDIR=$(get_libdir) install
+	emake -C apps DESTDIR="${D}" PREFIX="${EPREFIX}/usr" install
 	base_src_install_docs
 }
