@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/zita-resampler
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  zita-resampler-1.3.0.ebuild:
+  eapi 5
+  keyword for ~ppc
+  use emake -C instead of cd and base_src_make
 
   11 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   zita-resampler-1.3.0.ebuild:
